# poliscipy

./: CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml  tests.yml
docs/: _config.yml  api-reference.md  changelog.md  citation.md  contributing.md  customization.md  data-and-shapefiles.md  example-1.md  example-2.md  example-3.md  examples.md  faqs.md  index.md  installation.md  load-shapefile.md  merging-data.md  plot-electoral-map.md  quickstart.md  shapefiles.md
poliscipy/: colors.py  electoral_map.py  plot.py  shapefile_utils.py
poliscipy/shapefiles/shapefile-test/: cb_2018_us_state_500k.dbf  cb_2018_us_state_500k.sbn  cb_2018_us_state_500k.sbx  cb_2018_us_state_500k.shx
poliscipy/shapefiles/state_shapefile/: cb_2018_us_state_500k.dbf  cb_2018_us_state_500k.sbn  cb_2018_us_state_500k.sbx  cb_2018_us_state_500k.shx
tests/: conftest.py  test_plot.py
